k8s/custom-auto-scaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-auto-scaler-v1
spec:
  selector:
    matchLabels:
      app: custom-auto-scaler
  template:
    metadata:
      labels:
        app: custom-auto-scaler
        version: v1
    spec:
      containers:
        - name: custom-auto-scaler
          image: gcr.io/architect-certification-289902/23/custom-auto-scaler:1
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: custom-auto-scaler
spec:
  type: ClusterIP
  selector:
    app: custom-auto-scaler
  ports:
  - port: 8080
