k8s/rabbitmq-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-consumer
spec:
  selector:
    matchLabels:
      app: rabbitmq-consumer
  template:
    metadata:
      labels:
        app: rabbitmq-consumer
    spec:
      containers:
        - name: rabbitmq-consumer
          image: gcr.io/architect-certification-289902/23/rabbitmq-consumer:latest
          ports:
          - containerPort: 8090
          resources:
            requests:
              cpu: 500m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-consumer
spec:
  type: ClusterIP
  selector:
    app: rabbitmq-consumer
  ports:
  - port: 8090
